added biblography to toc and added glossary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,30 @@
             "args": [
                 "%DOCFILE%"
             ]
+        },
+        {
+            "name": "makeglossaries",
+            "command": "makeglossaries",
+            "args": [
+                "%DOCFILE%"
+            ]
+        }
+    ],
+    "latex-workshop.latex.recipes": [
+        {
+            "name": "pdflatex, makeglossaries, pdflatex (2x)",
+            "tools": [
+                "pdflatex",
+                "makeglossaries",
+                "pdflatex",
+                "pdflatex"
+            ]
+        },
+        {
+            "name": "latexmk",
+            "tools": [
+                "latexmk"
+            ]
         }
     ],
     "files.exclude": {
