renamed job and fix vscode infinite compile loop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
             ]
         }
     ],
+    "latex-workshop.latex.autoBuild.run": "onSave",
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
