fixed warnings and added log files to artifact

--- a/.github/workflows/ignore.conf
+++ b/.github/workflows/ignore.conf
@@ -3,3 +3,6 @@
 # If the pattern matches, the error will be ignored.
 # Lines starting with '#' are comments and will be ignored.
 # This file is used by the `check_logs.py` script.
+
+# Ignore empty biblography
+LaTeX Warning: Empty bibliography on input line [0-9]*.
