--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   Build-Preview:
+    name: build
     runs-on: ubuntu-latest
 
     env:
@@ -14,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set outputs
+      - name: Generate Artifact Name
         id: vars
         run: echo "artifact_name=preview#${{ github.event.pull_request.number }}.$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
@@ -52,7 +53,8 @@ jobs:
       - name: Install inkscape
         run: sudo apt-get install inkscape
 
-      - name: Compile LaTeX document
+      - name: Compile Document
+        id: compile
         run: |
           pdflatex --shell-escape -interaction=nonstopmode -halt-on-error main.tex
           makeglossaries main
@@ -60,22 +62,28 @@ jobs:
           pdflatex --shell-escape -interaction=nonstopmode -halt-on-error main.tex
         continue-on-error: true
 
-      - name: Upload PDF if build is successful
-        if: success()
-        id: upload
+      - name: Upload Artifacts
+        id: pdf-upload
+        if: ${{ steps.compile.outcome == 'success' }}
         uses: actions/upload-artifact@v4.3.3
         with:
           name: ${{ steps.vars.outputs.artifact_name }}
-          path: main.pdf
+          path: |
+            main.pdf
+            *.log
+            *.aux
 
-      - name: Generate comment
-        run: python .github/workflows/generate_comment.py ${{ steps.upload.outputs.artifact-url }}
+      - name: Generate Report
+        run: python .github/workflows/generate_comment.py ${{ steps.pdf-upload.outputs.artifact-url }}
 
-      - name: Post comment on PR
+      - name: Generate Report
+        run: python .github/workflows/generate_comment.py ${{ steps.pdf-upload.outputs.artifact-url }}
+
+      - name: Publish Report
         uses: peter-evans/create-or-update-comment@v3.1.0
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body-path: comment_body.md
 
-      - name: Check for fail conditions
+      - name: Analyze Logs
         run: python .github/workflows/check_logs.py
