Whitelisted some false positives

--- a/.github/workflows/ignore.conf
+++ b/.github/workflows/ignore.conf
@@ -6,3 +6,6 @@
 
 # Ignore empty biblography
 LaTeX Warning: Empty bibliography on input line [0-9]*.
+
+# Ignore false positive errors from the `infwarerr` package
+Package: infwarerr .* Providing info/warning/error messages
