--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          sudo apt-get install python3-pip
+          apt-get install python3-pip
           pip3 install pygments
-          sudo apt-get install inkscape
+          apt-get install inkscape
 
       - name: Compile Document
         id: compile
