--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          apt-get update
-          apt-get install python3-pip
+          apt-get -y update
+          apt-get install -y python3-pip
           pip3 install pygments
-          apt-get install inkscape
+          apt-get install -y inkscape
 
       - name: Compile Document
         id: compile
