--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -25,6 +25,7 @@ jobs:
         run: |
           apt-get -y update
           apt-get install -y python3-pip
+          apt-get install -y python3
           pip3 install pygments
           apt-get install -y inkscape
 
