--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -21,11 +21,14 @@ jobs:
         run: |
           echo "artifact-name=preview#${{ github.event.pull_request.number }}.$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
       - name: Install Dependencies
         run: |
           apt-get -y update
           apt-get install -y python3-pip
-          apt-get install -y python3
           pip3 install pygments
           apt-get install -y inkscape
 
