--- a/.github/workflows/pr_preview.yaml
+++ b/.github/workflows/pr_preview.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     name: Build Preview
     runs-on: ubuntu-latest
-    container: laurenss/texlive-full
+    container: mcquenji/texlive 
 
     env:
       FAIL_ON_WARNING: "true"  # Set this to 'false' to not fail the build on warnings
