--- a/.github/workflows/release_pdf.yaml
+++ b/.github/workflows/release_pdf.yaml
@@ -37,7 +37,7 @@ jobs:
                 tag_prefix: 'v'
                 tag_template: dd.mm.yy.i 
             
-            - name: Setup Variables
+            - name: Initialize Variables
               id: vars
               run: |
                 echo 'versioned-pdf-name="${{ env.PDF_NAME }} ${{ steps.tag.outputs.next_release_tag }}.pdf"' >> $GITHUB_OUTPUT
