Fix release workflow crashing (again) (#14)
* Update changelog template in .github/workflows/changelog.json

* Fix release workflow crashing

* lmao

* renamed variable step

--- a/.github/workflows/release_pdf.yaml
+++ b/.github/workflows/release_pdf.yaml
@@ -37,10 +37,10 @@ jobs:
                 tag_prefix: 'v'
                 tag_template: dd.mm.yy.i 
             
-            - name: Setup Variables
+            - name: Initialize Variables
               id: vars
               run: |
-                echo 'versioned-pdf-name="${{ env.PDF_NAME }} ${{ steps.tag.outputs.next_release_tag }}.pdf"' >> $GITHUB_ENV
+                echo 'versioned-pdf-name="${{ env.PDF_NAME }} ${{ steps.tag.outputs.next_release_tag }}.pdf"' >> $GITHUB_OUTPUT
 
             - name: Rename PDF
               run: mv main.pdf "${{ steps.vars.outputs.versioned-pdf-name }}"
